--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     <source src="images/SoMe.mp4" type="video/mp4">
 </video>
 <h2>Aftereffects infographic</h2>
-<img src="images/Infographic_FINAL_1.gif">
-
+<video autoplay loop>
+    <source src="images/Infographic_FINAL_1_1.mp4" type="video/mp4">
+</video>
 
 
 </body>
