--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0">
 
-    <title>Screeshots er for kedelige</title>
+    <title>Screenshots er for kedelige</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -15,7 +15,7 @@
 <h2>Cinemagraph uden Bevægende flag</h2>
 <img src="images/GLAM2.gif" alt="Cinemagraph uden bevægende flag">
 <h2>Video med tømmermænd</h2>
-<video width="100%" controls>
+<video width="70%" controls>
     <source src="images/SoMe.mp4" type="video/mp4">
 </video>
 <h2>Aftereffects infographic</h2>
