--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <h2>Cinemagraph uden Bevægende flag</h2>
 <img src="images/GLAM2.gif" alt="Cinemagraph uden bevægende flag">
 <h2>Video med tømmermænd</h2>
-<video width="70%" controls>
+<video controls>
     <source src="images/SoMe.mp4" type="video/mp4">
 </video>
 <h2>Aftereffects infographic</h2>
