--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-<h2>Cinemagraph med Bevægende flag</h2>
+<h2>Cinemagraph med bevægende flag</h2>
 <img src="images/GLAM.gif" alt="Cinemagraph med bevægende flag">
-<h2>Cinemagraph uden Bevægende flag</h2>
+<h2>Cinemagraph uden bevægende flag</h2>
 <img src="images/GLAM2.gif" alt="Cinemagraph uden bevægende flag">
 <h2>Video med tømmermænd</h2>
 <video controls>
